Create a version of the project in java 1.8 for demoing purposes